--- a/QuanLySanPham_Speed/packages.config
+++ b/QuanLySanPham_Speed/packages.config
@@ -1,11 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EPPlus" version="6.0.3" targetFramework="net47" />
+  <package id="EPPlus.Interfaces" version="6.0.0" targetFramework="net47" />
+  <package id="EPPlus.System.Drawing" version="6.0.0" targetFramework="net47" />
   <package id="FireSharp" version="2.0.4" targetFramework="net47" />
   <package id="FireSharp.Serialization.JsonNet" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net47" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net47" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net47" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net47" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net47" />
   <package id="RestSharp" version="104.4.0" targetFramework="net47" />
 </packages>
